Use latest commit to downgrade action

--- a/.github/workflows/Downgradev2.yml
+++ b/.github/workflows/Downgradev2.yml
@@ -23,7 +23,7 @@ jobs:
         id: setup-julia
         with:
           version: ${{ matrix.version }}
-      - uses: julia-actions/julia-downgrade-compat@v2
+      - uses: julia-actions/julia-downgrade-compat@main
         with:
           projects: ${{ matrix.downgrade_projects }}
           skip: Test,DowngradeTestPackage
